@@ -4,6 +4,7 @@
 3、调整runtime标签展示方式；
 4、新增支持根目录定义404.html匹配错误URL访问；
 5、新增缩略图自动缩放小图功能；
+6、新增config/route.php文件里定义路由规则的支持；
 6、优化内容管理列表布局；
 7、优化增强系统安全性；
 
